add somewhat proper authentication support

--- a/public/auth.html
+++ b/public/auth.html
@@ -34,17 +34,11 @@
         <form class="p-4" action="/oauth/authorize" method="POST">
             <h2 class="text-2xl font-bold mb-4">Sign In</h2>
             <input type="hidden" name="stuff" value="##form_data##">
-            <div class="mb-4">
-                <label class="block text-gray-700 font-bold mb-2" for="username">
-                    Username
-                </label>
-                <input class="appearance-none border-2 border-blue-500 rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="username" type="text" placeholder="Username">
-            </div>
             <div class="mb-6">
                 <label class="block text-gray-700 font-bold mb-2" for="password">
-                    Password
+                    Bridge Password
                 </label>
-                <input class="appearance-none border-2 border-blue-500 rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="password" type="password" placeholder="Password">
+                <input id="password" type="password" name="password" class="appearance-none border-2 border-blue-500 rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Password">
             </div>
             <div class="flex items-center justify-between">
                 <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
