--- a/public/auth.html
+++ b/public/auth.html
@@ -38,8 +38,7 @@
                 <label class="block text-gray-700 font-bold mb-2" for="identifier">
                     Email/Handle
                 </label>
-                <input id="identifier" name="identifier" class="appearance-none border-2 border-blue-500 rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="john.bsky.social">
-
+                <input id="identifier" name="identifier" autocapitalize="none" class="appearance-none border-2 border-blue-500 rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="john.bsky.social">
                 <label class="block text-gray-700 font-bold my-2" for="app_password">
                     App Password
                 </label>
