update index page

--- a/public/guide.html
+++ b/public/guide.html
@@ -28,32 +28,57 @@
 </head>
 <body>
 <div class="h-[200px] fade flex items-center justify-center">
-  <h1 class="text-white text-5xl font-bold -mt-1 -ml-1 [text-shadow:_2px_2px_0_rgb(0_0_0_/_60%)]">Sky Bridge</h1>
+  <h1 class="text-white text-6xl font-bold -mt-1 -ml-1 [text-shadow:_2px_2px_0_rgb(0_0_0_/_60%)]">Sky Bridge</h1>
 </div>
-<main class="flex flex-row justify-center">
+<main class="flex flex-col items-center justify-center">
+
+  <div class="max-w-4xl mt-4 px-4">
+    <p class="mb-4 font-semibold text-2xl text-center px-16">Bring your favourite Mastodon apps and use them with Bluesky!</p>
+    <img width="1570" height="1006" src="/guide/ivory_small.png" alt="guide1" class="w-full filter drop-shadow-xl">
+    <p class="text-gray-700 px-4 text-lg text-center">SkyBridge is a magical server that translates Mastodon requests into Bluesky ones, allowing you to unlock the power of incredible Mastodon apps like Ivory and use them on the Bluesky network.</p>
+
+    <div class="my-4">
+      <p class="font-semibold px-4 text-lg text-center">This is a work in progress and not guaranteed to work on every Mastodon app.</p>
+      <p class="font-semibold px-4 text-lg text-center">Use Ivory for the best experience.</p>
+    </div>
+
+    <p class="font-semibold text-xl mt-4 text-center hover:underline"><a class="cursor-pointer text-sky-600" href="https://github.com/videah/SkyBridge">View source code on GitHub</a></p>
+  </div>
   <ol class="max-w-2xl list-none list-inside px-4 py-2">
-    <li class="mb-4 flex items-center">
+    <hr class="my-4">
+    <h2 class="font-bold text-3xl block my-4 text-center">How to use</h2>
+    <li class="mb-4 flex">
       <div class="w-10 h-10 rounded-full bg-blue-500 flex items-center justify-center text-white font-bold text-lg mr-4">1</div>
       <div class="flex-1">
-        <span class="font-bold text-lg block mb-1">Add Account</span>
-        <p class="text-gray-700 text-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <span class="font-bold text-lg block mb-1">Point your client to this instance</span>
+        <p class="text-gray-700 text-lg">Find the account setup flow in your Mastodon client of choice and enter the URL: <b class="whitespace-nowrap text-black">##baseurl##</b></p>
+        <img width="958" height="718" src="/guide/add_account.png" alt="guide1" class="w-full">
       </div>
+      <div class="invisible w-10 h-10 rounded-full bg-blue-500 flex items-center justify-center text-white font-bold text-lg mr-4">1</div>
     </li>
-    <li class="mb-4 flex items-center">
+    <li class="mb-4 flex">
       <div class="w-10 h-10 rounded-full bg-blue-500 flex items-center justify-center text-white font-bold text-lg mr-4">2</div>
       <div class="flex-1">
-        <span class="font-bold text-lg block mb-1">Sign In</span>
-        <p class="text-gray-700 text-lg">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <span class="font-bold text-lg block mb-1">Enter your Bluesky details</span>
+        <p class="text-gray-700 text-lg">Sign in with your email or handle, preferably using an <a class="cursor-pointer hover:underline text-sky-600" href="https://staging.bsky.app/settings/app-passwords">App Password</a> instead of your main one. You might have to also enter a bridge password set by the owner of this server.</p>
+        <img width="1058" height="855" src="/guide/sign_in_small.png" alt="guide1" class="w-full">
       </div>
+      <div class="invisible w-10 h-10 rounded-full bg-blue-500 flex items-center justify-center text-white font-bold text-lg mr-4">1</div>
     </li>
-    <li class="mb-4 flex items-center">
+    <li class="mb-4 flex">
       <div class="w-10 h-10 rounded-full bg-blue-500 flex items-center justify-center text-white font-bold text-lg mr-4">3</div>
       <div class="flex-1">
-        <span class="font-bold text-lg block mb-1">Have fun!</span>
-        <p class="text-gray-700 text-lg">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <span class="font-bold text-lg block mb-1">Have fun skeeting!</span>
+        <p class="text-gray-700 text-lg">If your client is well-supported you should be good to go! Don't forget to report any issues or bugs you encounter on the <a class="cursor-pointer hover:underline text-sky-600" href="https://github.com/videah/SkyBridge">GitHub repo</a> (and maybe give me a star 🥺)</p>
       </div>
+      <div class="invisible w-10 h-10 rounded-full bg-blue-500 flex items-center justify-center text-white font-bold text-lg mr-4">3</div>
     </li>
   </ol>
 </main>
+<footer class="py-4">
+  <div class="container mx-auto flex items-center justify-center">
+    <p class="text-gray-500 text-sm">Made with <span class="text-red-500">❤️</span> by <a class="cursor-pointer hover:underline" href="https://github.com/videah">videah</a></p>
+  </div>
+</footer>
 </body>
 </html>
