--- a/public/guide.html
+++ b/public/guide.html
@@ -2,6 +2,20 @@
 <html lang="en">
 <head>
   <title>Sky Bridge</title>
+  <meta name="keywords" content=""/>
+  <meta name="description" content="Bring your favourite Mastodon apps and use them with Bluesky!"/>
+
+  <meta property="og:title" content="Sky Bridge"/>
+  <meta property="og:url" content="https://##baseurl##"/>
+  <meta property="og:image" content="https://##baseurl##/og.png"/>
+  <meta property="og:description" content="Bring your favourite Mastodon apps and use them with Bluesky!"/>
+  <meta property="og:type" content="website"/>
+
+  <meta name="twitter:card" content="summary"/>
+  <meta property="twitter:title" content="Sky Bridge"/>
+  <meta name="twitter:image" content="https://##baseurl##/og.png"/>
+  <meta property="twitter:description" content="Bring your favourite Mastodon apps and use them with Bluesky!"/>
+
   <meta charset="utf-8" name="viewport" content= "width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
