replace staging URLs with prod ones

--- a/public/guide.html
+++ b/public/guide.html
@@ -74,7 +74,7 @@
       <div class="w-10 h-10 rounded-full bg-blue-500 flex items-center justify-center text-white font-bold text-lg mr-4">2</div>
       <div class="flex-1">
         <span class="font-bold text-lg block mb-1">Enter your Bluesky details</span>
-        <p class="text-gray-700 text-lg">Sign in with your email or handle, preferably using an <a class="cursor-pointer hover:underline text-sky-600" href="https://staging.bsky.app/settings/app-passwords">App Password</a> instead of your main one. You might have to also enter a bridge password set by the owner of this server.</p>
+        <p class="text-gray-700 text-lg">Sign in with your email or handle, preferably using an <a class="cursor-pointer hover:underline text-sky-600" href="https://bsky.app/settings/app-passwords">App Password</a> instead of your main one. You might have to also enter a bridge password set by the owner of this server.</p>
         <img width="1058" height="855" src="/guide/sign_in_small.png" alt="guide1" class="w-full">
       </div>
       <div class="invisible w-10 h-10 rounded-full bg-blue-500 flex items-center justify-center text-white font-bold text-lg mr-4">1</div>
