--- a/public/auth.html
+++ b/public/auth.html
@@ -45,11 +45,13 @@
                 <input id="app_password" type="password" name="app_password" class="appearance-none border-2 border-blue-500 rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Password">
                 <p class="mt-2">For increased security please create an app password on Bluesky instead of using your main password.</p>
                 <p class="mt-2">This password is only stored by your client and is never stored on the server.</p>
-                <hr class="my-4">
-                <label class="block text-gray-700 font-bold mb-2" for="bridge_password">
-                    Bridge Password
-                </label>
-                <input id="bridge_password" type="password" name="bridge_password" class="appearance-none border-2 border-blue-500 rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Password">
+                <div class="##bridge_password_class##">
+                    <hr class="my-4">
+                    <label class="block text-gray-700 font-bold mb-2" for="bridge_password">
+                        Bridge Password
+                    </label>
+                    <input id="bridge_password" type="password" name="bridge_password" class="appearance-none border-2 border-blue-500 rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Password">
+                </div>
             </div>
             <div class="flex items-center justify-between">
                 <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
