add user preferences/filter out replies on home feed

--- a/public/auth.html
+++ b/public/auth.html
@@ -45,6 +45,13 @@
                 <input id="app_password" type="password" name="app_password" class="appearance-none border-2 border-blue-500 rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Password">
                 <p class="mt-2">For increased security please create an app password on Bluesky instead of using your main password.</p>
                 <p class="mt-2">This password is only stored by your client and is never stored on the server.</p>
+
+                <h2 class="text-2xl font-bold my-4">Preferences</h2>
+                <label for="show_replies" class="ml-2 text-gray-700 font-bold mb-2 flex items-center">
+                    <input type="checkbox" id="show_replies" name="show_replies" class="form-checkbox text-blue-600"/>
+                    <span class="ml-2">Show replies in the home feed?</span>
+                </label>
+
                 <div class="##bridge_password_class##">
                     <hr class="my-4">
                     <label class="block text-gray-700 font-bold mb-2" for="bridge_password">
